--- a/index.html
+++ b/index.html
@@ -5,31 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Momentum</title>
+    <link rel="shortcut icon" sizes="16x16 32x32 64x64" href="img/logo.png" />
+    <title>New Tab</title>
   </head>
   <body>
-    <form id="login-form" class="hidden">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log In" />
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 id="greeting" class="hidden"></h1>
-    <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter" required />
-    </form>
-    <ul id="todo-list"></ul>
-    <div id="quote">
-      <span></span>
-      <span></span>
+    <div id="greeting-box">
+      <div id="status-bar">
+        <div id="link">
+          <span>Links</span>
+          <i class="fas fa-search"></i>
+        </div>
+        <div id="weather">
+          <div id="weather-status">
+            <i class="fas"></i>
+            <span></span>
+          </div>
+          <span id="city"></span>
+        </div>
+      </div>
+      <span id="clock">00:00</span>
+      <span id="greeting"></span>
+      <span id="todo-question">What is your main focus for today?</span>
+      <form id="todo-form">
+        <input type="text" required />
+      </form>
+      <ul id="todo-list"></ul>
+      <div id="quote">
+        <span></span>
+      </div>
     </div>
-    <div id="weather">
-      <span></span>
-      <span></span>
+    <div id="login-box">
+      <img src="img/logo-2.png" />
+      <span id="name-question">Hello, what's your name?</span>
+      <form id="login-form">
+        <input required maxlength="15" type="text" />
+      </form>
     </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
@@ -37,5 +47,9 @@
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
     <script src="js/weather.js"></script>
+    <script
+      src="https://kit.fontawesome.com/6478f529f2.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
