--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
       <form id="todo-form">
         <input type="text" required />
       </form>
-      <ul id="todo-list"></ul>
+      <div id="todo-bubble" class="hidden">
+        <span id="today-span">Today</span>
+        <div id="todo-box">
+          <ul id="todo-list"></ul>
+        </div>
+      </div>
+      <button id="todo-button" class="opacity">Todo</button>
       <div id="quote">
         <span></span>
       </div>
